src/components/home/testimonials/testimonials.scss
/* testimonials.scss */
.slick-list{
    overflow: visible !important;
}
.titleTestimonials{
    font-size: 2em;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: #1d5a4f;
    margin-left: 5%;
    margin-bottom: 4%;
}
   
.carousel-item-testimonial {
    display: flex;
    width: 90% !important;
    text-align: center;
    padding: 10px;
    margin-bottom: 70%;
    border: 2px solid #1d5a4f;
    background: linear-gradient(#6ca79c, #597e73, #278070);
    border-radius: 50px;
    height: 500px;
    position: relative; /* Para ajustar a posição da imagem */
}

.name-testimonial {
    position: relative;
    color: #ffffff;
    font-size: 18px;
    font-weight: bold;
    margin: 0;
}

.testimonial-testimonial {
    font-size: 1.2em;
    width: 80%;
    margin: auto;
    text-align: justify;
    margin-top: 10%;
    font-weight: 500;
    color: black;
}

.image-testimonial img {
    width: 35%;
    height: auto;
    border-radius: 50%;
    margin: auto;
    margin-top: -15%;
    margin-bottom: 15%;
}

.testimonial-medico {
    width: 90%;
    margin: auto;
    color: #0c2722;
    font-size: 1rem;
    font-weight: 500;
    
    margin-bottom: 25%;
}
/*
.rating {
    margin-top: -10px;
    display: inline-block;
    margin-bottom: 9%;
}

.rating .star-icon {
    font-size: 24px;
    color: yellow;
    position: relative;
}

*/

